Minor CSS style edits to make sure background covers whole page.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@
   
  body {
    background-image: url(./public/images/background.jpg);
+   background-size: cover;
  }
 
  .nav-wrapper .page-footer {
